--- a/projects/imnicksouza.html
+++ b/projects/imnicksouza.html
@@ -13,22 +13,22 @@ permalink: '/projects/imnicksouza/'
             <div class="col-lg-12">
                 <div class="col-lg-4 proj fadeInDown2 clearfix">
                     <dl>
-                            <dt>For:</dt>
-                            <dd>Nick Souza Media</dd>
-                            <dt>Role:</dt>
-                            <dd>Art Director + Designer + UX</dd>
-                            <dt>With:</dt>
-                            <dd>Nicholas Souza (Videographer)</dd>
-                            <dt>Live Link:</dt>
-                            <dd><a href="http://imnicksouza.com">ImNickSouza.com</a></dd>
-                        </dl>
+                        <dt>For:</dt>
+                        <dd>Nick Souza Media</dd>
+                        <dt>Role:</dt>
+                        <dd>Art Director + Designer + UX</dd>
+                        <dt>With:</dt>
+                        <dd>Nicholas Souza (Videographer)</dd>
+                        <dt>Live Link:</dt>
+                        <dd><a href="http://imnicksouza.com">ImNickSouza.com</a></dd>
+                    </dl>
                     <hr>
                     <div class="clearfix">
                         <a href="https://www.dropbox.com/s/c5lvmeegk71iosy/100-icons-download.zip?dl=0" class="slide-link" onclick=”ga(‘send’, ‘event’, ‘ZIP’, ‘Download’, ‘Font/Office Icons’);“>Download Now</a>
                     </div>
                 </div>
                 <div class="col-lg-7 col-lg-offset-1 fadeInDown3">
-                    <p>This 100 Line Icons set is designed for TylerBrooksDesigns.com. This set is collection of vector icons available in these formats: <b>SVG / AI / EPS / PNG</b>. You are free to use for personal or commercial purposes, to share or to modify it. Please do not sub-license, resell or rent it.</p>
+                    <p>Building this website for a college friend has been very satisfying for me personally. Nick requested help building his own personal portfolio with the objective of sharing his videos. I was able to set him up with the exact domain name he wanted, purchased through a quality web hosting service. I utilized Amazon Web Services to host Nick's new domain economically and reliably. The result exceeded his expectations.</p>
                     <div class="donate-button">
                     <p><i class="icon-beer"></i> Buy me a beer</p>
                     {% include paypal-donate.html %}
