--- a/index.html
+++ b/index.html
@@ -4,4 +4,5 @@
 # See: https://jekyllrb.com/docs/themes/#overriding-theme-defaults
 layout: index
 title: Tyler Brooks Designs
+description: Tyler
 ---
