alot of changes on thanksgiving

--- a/index.html
+++ b/index.html
@@ -4,5 +4,5 @@
 # See: https://jekyllrb.com/docs/themes/#overriding-theme-defaults
 layout: index
 title: Tyler Brooks Designs
-description: Tyler
+description: Hi, I am Tyler a Web and Graphic Designer with a passion for creating first-class icons and digital experiences. This website has evolved from a personal portfolio to a website with a collection of free downloadable design resources.
 ---
