--- a/projects/annual-report-icons.html
+++ b/projects/annual-report-icons.html
@@ -2,9 +2,9 @@
 layout: projects
 title: ImNickSouza
 description: Curabitur eget leo id est ornare semper. Nulla in lacinia dolor, scelerisque efficitur mi.
-banner: /img/nsm/nsm-banner-2.jpg
-banner_inner: /img/nsm/nsm-logo.jpg
-banner_inner_alt: imnicksouza - nicksouzamedia block logo
+banner: /img/100-icons/100-banner.gif
+banner_inner: /img/100-icons/100-icons.png
+banner_inner_alt: Office icon set for web and app ui
 permalink: '/projects/imnicksouza/'
 ---
 
@@ -19,12 +19,20 @@ permalink: '/projects/imnicksouza/'
                         <dd>Art Director + Designer + UX</dd>
                         <dt>With:</dt>
                         <dd>Nicholas Souza (Videographer)</dd>
-                        <!-- <dt>Live Link:</dt>
-                        <dd><a href="http://imnicksouza.com">ImNickSouza.com</a></dd> -->
+                        <dt>Live Link:</dt>
+                        <dd><a href="http://imnicksouza.com">ImNickSouza.com</a></dd>
                     </dl>
+                    <hr>
+                    <div class="clearfix">
+                        <a href="https://www.dropbox.com/s/c5lvmeegk71iosy/100-icons-download.zip?dl=0" class="slide-link" onclick=”ga(‘send’, ‘event’, ‘ZIP’, ‘Download’, ‘Font/Office Icons’);“>Download Now</a>
+                    </div>
                 </div>
                 <div class="col-lg-7 col-lg-offset-1 fadeInDown3">
                     <p>Building this website for a college friend has been very satisfying for me personally. Nick requested help building his own personal portfolio with the objective of sharing his videos. I was able to set him up with the exact domain name he wanted, purchased through a quality web hosting service. I utilized Amazon Web Services to host Nick's new domain economically and reliably. The result exceeded his expectations.</p>
+                    <div class="donate-button">
+                    <p><i class="icon-beer"></i> Buy me a beer</p>
+                    {% include paypal-donate.html %}
+                    </div>
                 </div>
             </div>
         </div>
