--- a/projects/100-line-icons.html
+++ b/projects/100-line-icons.html
@@ -1,7 +1,7 @@
 ---
 layout: projects
-title: 100 Line Icons
-description: Curabitur eget leo id est ornare semper. Nulla in lacinia dolor, scelerisque efficitur mi.
+title: '100 Line Icons: TylerBrooksDesigns'
+description: 'This 100 Line Icons set is designed for TylerBrooksDesigns.com. This set is collection of vector icons available in these formats: SVG / AI / EPS / PNG.'
 banner: /img/100-icons/100-banner.gif
 banner_inner: /img/100-icons/100-icons.png
 banner_inner_alt: Office icon set for web and app ui
@@ -25,10 +25,10 @@ permalink: '/projects/100-icons/'
                 </div>
                 <div class="col-lg-7 col-lg-offset-1 fadeInDown3">
                     <p>This 100 Line Icons set is designed for TylerBrooksDesigns.com. This set is collection of vector icons available in these formats: <b>SVG / AI / EPS / PNG</b>. You are free to use for personal or commercial purposes, to share or to modify it. Please do not sub-license, resell or rent it.</p>
-                    <div class="donate-button">
+                    <!-- <div class="donate-button">
                     <p><i class="icon-beer"></i> Buy me a beer</p>
                     {% include paypal-donate.html %}
-                    </div>
+                    </div> -->
                 </div>
             </div>
         </div>
@@ -36,9 +36,9 @@ permalink: '/projects/100-icons/'
     
     <section class="project-container" itemprop="exampleOfWork">
         <ul class="gallery-grid">
-            <li><img class="module" itemprop="image" src="../../img/100-icons/principles.gif" alt="tylerbrooksdesigns icons small selection of icons"></li>
-            <li><img class="module" itemprop="image" src="../../img/100-icons/palette.gif" alt="project color system"></li>
-            <li><img class="module" itemprop="image" src="../../img/100-icons/stroke.gif" alt="object system"></li>
+            <li><img class="module" itemprop="image" src="{{ site.baseurl }}/img/100-icons/principles.gif" alt="tylerbrooksdesigns icons small selection of icons"></li>
+            <li><img class="module" itemprop="image" src="{{ site.baseurl }}/img/100-icons/palette.gif" alt="project color system"></li>
+            <li><img class="module" itemprop="image" src="{{ site.baseurl }}/img/100-icons/stroke.gif" alt="object system"></li>
         </ul>
         <div style="clear:both;"></div>
         <img class="module" src="../../img/100-icons/icon-set.gif" alt="Icon Designs used on tylerbrooksdesigns webpage"/>
@@ -46,7 +46,7 @@ permalink: '/projects/100-icons/'
     </section>
 
     <section class="bottom-bar">
-        <a class="bar-icon" href="../../about/"><i class="icon-avatar"></i></a>
-        <a class="bar-icon icon-center" href="//tylerbrooksdesigns.com"><i class="icon-th"></i></a>
-        <a class="bar-icon icon-right" href="../imnicksouza/"><i class="icon-arrow-right"></i></a>
+        <a class="bar-icon" href="{{ site.baseurl }}/about/"><i class="icon-avatar"></i></a>
+        <a class="bar-icon icon-center" href="{{ site.baseurl }}/"><i class="icon-th"></i></a>
+        <a class="bar-icon icon-right" href="{{ site.baseurl }}/projects/icon-font/"><i class="icon-arrow-right"></i></a>
     </section>
