--- a/projects/imnicksouza.html
+++ b/projects/imnicksouza.html
@@ -1,10 +1,10 @@
 ---
 layout: projects
-title: ImNickSouza
-description: Curabitur eget leo id est ornare semper. Nulla in lacinia dolor, scelerisque efficitur mi.
+title: 'ImNickSouza: TylerBrooksDesigns'
+description: 'Building this website for a college friend has been very satisfying for me personally. Nick requested help building his own personal portfolio with the objective of sharing his videos.'
 banner: /img/nsm/nsm-banner-2.jpg
 banner_inner: /img/nsm/nsm-logo.jpg
-banner_inner_alt: imnicksouza - nicksouzamedia block logo
+banner_inner_alt: 'imnicksouza - nicksouzamedia block logo'
 permalink: '/projects/imnicksouza/'
 ---
 
@@ -37,7 +37,7 @@ permalink: '/projects/imnicksouza/'
         </section>
 
     <section class="bottom-bar">
-        <a class="bar-icon" href="../../about/"><i class="icon-avatar"></i></a>
-        <a class="bar-icon icon-center" href="//tylerbrooksdesigns.com"><i class="icon-th"></i></a>
-        <a class="bar-icon icon-right" href="../imnicksouza/"><i class="icon-arrow-right"></i></a>
+        <a class="bar-icon" href="{{ site.baseurl }}/projects/icon-font/"><i class="icon-arrow-left"></i></a>
+        <a class="bar-icon icon-center" href="{{ site.basuerl }}/"><i class="icon-th"></i></a>
+        <a class="bar-icon icon-right" href="{{ site.baseurl }}/projects/social-media-icons/"><i class="icon-arrow-right"></i></a>
     </section>
