--- a/projects/100-line-icons.html
+++ b/projects/100-line-icons.html
@@ -11,7 +11,7 @@ permalink: '/projects/100-icons/'
 	<section class="container spaces"  id="about work" role="article">
         <div class="row">
             <div class="col-lg-12">
-                <div class="col-lg-4 proj fadeInDown2 clearfix">
+                <div class="col-sm-4 proj fadeInDown2 clearfix">
                     <dl class="clearfix">
                         <dt>Freebie:</dt><dd>100 Free Annual Report Icons</dd>
                         <dt>File Type:</dt><dd>SVG &#8226 AI &#8226 EPS &#8226 PNG</dd>
@@ -23,7 +23,7 @@ permalink: '/projects/100-icons/'
                         <a href="https://www.dropbox.com/s/c5lvmeegk71iosy/100-icons-download.zip?dl=0" class="slide-link" onclick=”ga(‘send’, ‘event’, ‘ZIP’, ‘Download’, ‘Font/Office Icons’);“>Download Now</a>
                     </div>
                 </div>
-                <div class="col-lg-7 col-lg-offset-1 fadeInDown3">
+                <div class="col-sm-7 col-sm-offset-1 fadeInDown3">
                     <p>This 100 Line Icons set is designed for TylerBrooksDesigns.com. This set is collection of vector icons available in these formats: <b>SVG / AI / EPS / PNG</b>. You are free to use for personal or commercial purposes, to share or to modify it. Please do not sub-license, resell or rent it.</p>
                     <!-- <div class="donate-button">
                     <p><i class="icon-beer"></i> Buy me a beer</p>
