--- a/projects/fit-potato.html
+++ b/projects/fit-potato.html
@@ -11,7 +11,7 @@ permalink: '/projects/fit-potato/'
 	<section class="container spaces"  id="about work" role="article">
         <div class="row">
             <div class="col-lg-12">
-                <div class="col-lg-4 proj fadeInDown2 clearfix">
+                <div class="col-sm-4 proj fadeInDown2 clearfix">
                     <dl>
                         <dt>For:</dt>
                         <dd>99DESIGNS.COM</dd>
@@ -23,7 +23,7 @@ permalink: '/projects/fit-potato/'
                         <dd><a href="http://imnicksouza.com">ImNickSouza.com</a></dd> -->
                     </dl>
                 </div>
-                <div class="col-lg-7 col-lg-offset-1 fadeInDown3">
+                <div class="col-sm-7 col-sm-offset-1 fadeInDown3">
                     <h2 class="fadeInDown" itemprop="name">FitPotato Landing Page Design</h2>
                 <p class="fadeInDown2" itemprop="description">99Designs.com project for an app called FitPotato. The design made it to the last round but was not selected as the winner of the contest. The project brief required the page have social media links and a featured video section.</p>
                 </div>
