--- a/projects/free-office-icons.html
+++ b/projects/free-office-icons.html
@@ -11,7 +11,7 @@ permalink: '/projects/icon-font/'
 	<section class="container spaces"  id="about work" role="article">
         <div class="row">
             <div class="col-lg-12">
-                <div class="col-lg-4 proj fadeInDown2 clearfix">
+                <div class="col-sm-4 proj fadeInDown2 clearfix">
                     <dl class="clearfix">
                         <dt>Freebie:</dt>
                         <dd>100 Free Web and App UI Icons</dd>
@@ -27,7 +27,7 @@ permalink: '/projects/icon-font/'
                         <a href="https://www.dropbox.com/s/jtekzizhyy1lg4k/tbd-office-icons-font.zip?dl=0" class="slide-link" onclick=”ga(‘send’, ‘event’, ‘ZIP’, ‘Download’, ‘Font/Office Icons’);“>Download Now</a>
                     </div>
                 </div>
-                <div class="col-lg-7 col-lg-offset-1 fadeInDown3">
+                <div class="col-sm-7 col-sm-offset-1 fadeInDown3">
                     <p>Designed for TylerBrooksDesigns.com. You are free to use for personal or commercial purposes, to share or to modify it. Please do not sub-license, resell or rent it. <strong>This icon set is also available as a custom icon font generated using the <a href="https://icomoon.io/">IcoMoon App</a>.</strong> Documentation and easy install instructions are included in the download package. Please share these icons with friends!</p>
                 </div>
             </div>
