--- a/projects/social-media-icons.html
+++ b/projects/social-media-icons.html
@@ -11,7 +11,7 @@ permalink: '/projects/social-media-icons/'
 	<section class="container spaces"  id="about work" role="article">
         <div class="row">
             <div class="col-lg-12">
-                <div class="col-lg-4 proj fadeInDown2 clearfix">
+                <div class="col-sm-4 proj fadeInDown2 clearfix">
                     <dl>
                         <dt>Freebie:</dt>
                         <dd>Social Media Icons</dd>
@@ -23,7 +23,7 @@ permalink: '/projects/social-media-icons/'
                         <dd><a href="https://www.behance.net/gallery/20065543/Free-Social-Media-Icons">Behance</a></dd>
                     </dl>
                 </div>
-                <div class="col-lg-7 col-lg-offset-1 fadeInDown3">
+                <div class="col-sm-7 col-sm-offset-1 fadeInDown3">
                     <p>Created for TylerBrooksDesigns.com. You are free to use for personal or commercial purposes, to share or to modify it. Please do not sub-license, resell or rent it. Download the free Ai Vector file below. Enjoy!</p>
                         <p class="fadeInDown3"><a class="slide-link link" href="#download">Download located at the bottom of the page &rarr;</a></p>
                 </div>
