--- a/projects/free-browser.html
+++ b/projects/free-browser.html
@@ -11,7 +11,7 @@ permalink: '/projects/browser/'
 	<section class="container spaces"  id="about work" role="article">
         <div class="row">
             <div class="col-lg-12">
-                <div class="col-lg-4 proj fadeInDown2 clearfix">
+                <div class="col-sm-4 proj fadeInDown2 clearfix">
                     <dl class="clearfix">
                         <dt>Freebie:</dt>
                         <dd>Free Minimal Browser Download</dd>
@@ -23,7 +23,7 @@ permalink: '/projects/browser/'
                         <a href="https://www.dropbox.com/s/lzuz62v8wg2dwgn/Minimal-Browser-TBD.zip?dl=0" class="slide-link" onclick=”ga(‘send’, ‘event’, ‘ZIP’, ‘Download’, ‘Browser Download’);“>Download</a>
                     </div>
                 </div>
-                <div class="col-lg-7 col-lg-offset-1 fadeInDown3">
+                <div class="col-sm-7 col-sm-offset-1 fadeInDown3">
                     <p>Download the Minimal Browser for free by clicking below. You are free to use for personal or commercial purposes, to share or to modify it.</p>
                 </div>
             </div>
