--- a/projects/free-icons.html
+++ b/projects/free-icons.html
@@ -11,7 +11,7 @@ permalink: '/projects/free-icons/'
 	<section class="container spaces"  id="about work" role="article">
         <div class="row">
             <div class="col-lg-12">
-                <div class="col-lg-4 proj fadeInDown2 clearfix">
+                <div class="col-sm-4 proj fadeInDown2 clearfix">
                     <dl class="clearfix">
                         <dt>Freebie:</dt>
                         <dd>100 Free Annual Report Icons</dd>
@@ -27,7 +27,7 @@ permalink: '/projects/free-icons/'
                         <a href="https://www.dropbox.com/s/v7d7bc6barjqhua/tbd-part-2-all.zip?dl=0" class="slide-link" onclick=”ga(‘send’, ‘event’, ‘ZIP’, ‘Download’, ‘Font/Office Icons’);“>Download Now</a>
                     </div>
                 </div>
-                <div class="col-lg-7 col-lg-offset-1 fadeInDown3">
+                <div class="col-sm-7 col-sm-offset-1 fadeInDown3">
                     <p>This Annual Report themed icon set is designed for TylerBrooksDesigns.com. This set is collection of vector icons available in these formats: <b>SVG / AI / FONT</b>. You are free to use for personal or commercial purposes, to share or to modify it. Please do not sub-license, resell or rent it. <strong>The icon font is generated using the <a href="https://icomoon.io/">IcoMoon App</a>.</strong> Documentation and easy install instructions are included in the download package. Please share these icons with friends!</p>
                 </div>
             </div>
