--- a/projects/imnicksouza.html
+++ b/projects/imnicksouza.html
@@ -11,7 +11,7 @@ permalink: '/projects/imnicksouza/'
 	<section class="container spaces"  id="about work" role="article">
         <div class="row">
             <div class="col-lg-12">
-                <div class="col-lg-4 proj fadeInDown2 clearfix">
+                <div class="col-sm-4 proj fadeInDown2 clearfix">
                     <dl>
                         <dt>For:</dt>
                         <dd>Nick Souza Media</dd>
@@ -23,7 +23,7 @@ permalink: '/projects/imnicksouza/'
                         <dd><a href="http://imnicksouza.com">ImNickSouza.com</a></dd> -->
                     </dl>
                 </div>
-                <div class="col-lg-7 col-lg-offset-1 fadeInDown3">
+                <div class="col-sm-7 col-sm-offset-1 fadeInDown3">
                     <p>Building this website for a college friend has been very satisfying for me personally. Nick requested help building his own personal portfolio with the objective of sharing his videos. I was able to set him up with the exact domain name he wanted, purchased through a quality web hosting service. I utilized Amazon Web Services to host Nick's new domain economically and reliably. The result exceeded his expectations.</p>
                 </div>
             </div>
