--- a/projects/100-line-icons.html
+++ b/projects/100-line-icons.html
@@ -48,5 +48,5 @@ permalink: '/projects/100-icons/'
     <section class="bottom-bar">
         <a class="bar-icon" href="{{ site.baseurl }}/about/"><i class="icon-avatar"></i></a>
         <a class="bar-icon icon-center" href="{{ site.baseurl }}/"><i class="icon-th"></i></a>
-        <a class="bar-icon icon-right" href="{{ site.baseurl }}/projects/icon-font/"><i class="icon-arrow-right"></i></a>
+        <a class="bar-icon icon-right" href="{{ site.baseurl }}/projects/boatus-foundation/"><i class="icon-arrow-right"></i></a>
     </section>
