--- a/projects/busf.html
+++ b/projects/busf.html
@@ -1,7 +1,7 @@
 ---
 layout: projects
-title: '100 Line Icons: TylerBrooksDesigns'
-description: 'This 100 Line Icons set is designed for TylerBrooksDesigns.com. This set is collection of vector icons available in these formats: SVG / AI / EPS / PNG.'
+title: 'BoatUS Foundation Redesign: TylerBrooksDesigns'
+description: 'After becoming a full time employee most of my time has been spent creating, updating and strategically building focused and effective web pages.'
 banner: /img/100-icons/100-banner.gif
 banner_inner: /img/100-icons/100-icons.png
 banner_inner_alt: Office icon set for web and app ui
@@ -13,40 +13,40 @@ permalink: '/projects/boatus-foundation/'
             <div class="col-lg-12">
                 <div class="col-sm-4 proj fadeInDown2 clearfix">
                     <dl class="clearfix">
-                        <dt>Freebie:</dt><dd>100 Free Annual Report Icons</dd>
-                        <dt>File Type:</dt><dd>SVG &#8226 AI &#8226 EPS &#8226 PNG</dd>
-                        <dt>Download:</dt><dd>1,470+</dd>
-                        <dt>Like it:</dt><dd><a href="https://www.behance.net/gallery/35340249/100-Line-Icons">Behance</a></dd>
+                        <dt>For:</dt><dd>The BoatUS Foundation</dd>
+                        <dt>Role:</dt><dd>UX + UI + Web Designer</dd>
+                        <dt>With:</dt><dd>BoatUS Corporate</dd>
+                        <dt>Live Link:</dt><dd><a href="http://boatus.org">BoatUS.org</a></dd>
                     </dl>
-                    <hr>
-                    <div class="clearfix">
-                        <a href="https://www.dropbox.com/s/c5lvmeegk71iosy/100-icons-download.zip?dl=0" class="slide-link" onclick=”ga(‘send’, ‘event’, ‘ZIP’, ‘Download’, ‘Font/Office Icons’);“>Download Now</a>
-                    </div>
                 </div>
                 <div class="col-sm-7 col-sm-offset-1 fadeInDown3">
-                    <p>This 100 Line Icons set is designed for TylerBrooksDesigns.com. This set is collection of vector icons available in these formats: <b>SVG / AI / EPS / PNG</b>. You are free to use for personal or commercial purposes, to share or to modify it. Please do not sub-license, resell or rent it.</p>
-                    <!-- <div class="donate-button">
-                    <p><i class="icon-beer"></i> Buy me a beer</p>
-                    {% include paypal-donate.html %}
-                    </div> -->
+                    <p>I started at the BoatUS Foundation as an intern the summer after graduating from Roger Williams University in 2013. Soon after arriving I had the opportunity to redesign and develop a new courses landing page. After completing this first project my responsibilities quickly changed from strictly designing print and web graphics to managing and updating the look and feel of the website. After becoming a full time employee most of my time had been spent creating, updating and strategically building focused and effective web pages.</p>
+                    <p>This site was built using the Foundation Zurb framework.</p>
                 </div>
             </div>
         </div>
     </section>
     
-    <section class="project-container" itemprop="exampleOfWork">
-        <ul class="gallery-grid">
-            <li><img class="module" itemprop="image" src="{{ site.baseurl }}/img/100-icons/principles.gif" alt="tylerbrooksdesigns icons small selection of icons"></li>
-            <li><img class="module" itemprop="image" src="{{ site.baseurl }}/img/100-icons/palette.gif" alt="project color system"></li>
-            <li><img class="module" itemprop="image" src="{{ site.baseurl }}/img/100-icons/stroke.gif" alt="object system"></li>
+    <section class="project-container">
+        <img class="module" src="{{ site.baseurl }}/img/splash/homepage-tall.jpg" alt="laptop view of the courses landing page"/>
+        <ul class="gallery-grid clearfix">
+            <li><img class="module" src="{{ site.baseurl }}/img/splash/grid.jpg" alt="phone view"></li>
+            <li><img class="module" src="{{ site.baseurl }}/img/splash/courses-small.jpg" alt="courses page web design"></li>
+            <li><img class="module" src="{{ site.baseurl }}/img/splash/web-mock.jpg" alt="web design laptop design"></li>
         </ul>
-        <div style="clear:both;"></div>
-        <img class="module" src="../../img/100-icons/icon-set.gif" alt="Icon Designs used on tylerbrooksdesigns webpage"/>
-        <img class="module" src="../../img/100-icons/column-large.gif" alt="Icon Designs used on tylerbrooksdesigns webpage"/>
+        <section class="row spaces project-caption">
+            <div class="col-lg-12 module">
+                <h2>Responsive Layout</h2>
+                <p>Originally this landing page was created using the front-end framework Foundation Zurb 4 and later was converted to work within the Percussion Web Content Management System. Since Foundation Zurb is a mobile-first framework a responsive layout has been a priority since the beginning. Close attention has been paid to its usability on desktops, tablets and all other handheld devices. </p>
+            </div>
+        </section>
+        <img class="module" src="{{ site.baseurl }}/img/splash/boating-safety-icons.jpg" alt="boating safety web design icon font example"/>
+        <img class="module" src="{{ site.baseurl }}/img/splash/homepage-desk.jpg" alt="mobile view - phone on desk"/>
+        <img class="module" src="{{ site.baseurl }}/img/splash/4up-splash.jpg" alt="landing page design"/>
     </section>
 
     <section class="bottom-bar">
-        <a class="bar-icon" href="{{ site.baseurl }}/about/"><i class="icon-avatar"></i></a>
+        <a class="bar-icon" href="{{ site.baseurl }}/projects/100-icons/"><i class="icon-arrow-left"></i></a>
         <a class="bar-icon icon-center" href="{{ site.baseurl }}/"><i class="icon-th"></i></a>
         <a class="bar-icon icon-right" href="{{ site.baseurl }}/projects/icon-font/"><i class="icon-arrow-right"></i></a>
     </section>
