--- a/projects/free-office-icons.html
+++ b/projects/free-office-icons.html
@@ -45,7 +45,7 @@ permalink: '/projects/icon-font/'
     </section>
 
     <section class="bottom-bar">
-        <a class="bar-icon" href="{{ site.baseurl }}/projects/100-icons/"><i class="icon-arrow-left"></i></a>
+        <a class="bar-icon" href="{{ site.baseurl }}/projects/boatus-foundation/"><i class="icon-arrow-left"></i></a>
         <a class="bar-icon icon-center" href="{{ site.baseurl }}/"><i class="icon-th"></i></a>
         <a class="bar-icon icon-right" href="{{ site.baseurl }}/projects/free-icons/"><i class="icon-arrow-right"></i></a>
     </section>
