--- a/projects/busf.html
+++ b/projects/busf.html
@@ -29,6 +29,7 @@ permalink: '/projects/boatus-foundation/'
     
     <section class="project-container">
         <img class="module" src="{{ site.baseurl }}/img/splash/homepage-tall.jpg" alt="laptop view of the courses landing page"/>
+        <img class="module" src="{{ site.baseurl }}/img/splash/courses.jpg" alt="courses landing page"/>
         <ul class="gallery-grid clearfix">
             <li><img class="module" src="{{ site.baseurl }}/img/splash/grid.jpg" alt="phone view"></li>
             <li><img class="module" src="{{ site.baseurl }}/img/splash/courses-small.jpg" alt="courses page web design"></li>
@@ -42,7 +43,6 @@ permalink: '/projects/boatus-foundation/'
         </section>
         <img class="module" src="{{ site.baseurl }}/img/splash/boating-safety-icons.jpg" alt="boating safety web design icon font example"/>
         <img class="module" src="{{ site.baseurl }}/img/splash/homepage-desk.jpg" alt="mobile view - phone on desk"/>
-        <img class="module" src="{{ site.baseurl }}/img/splash/4up-splash.jpg" alt="landing page design"/>
     </section>
 
     <section class="bottom-bar">
